src/components/AlbumCards.css
.album-cards {
  display: grid;
  grid-template-columns: repeat(auto-fit, 186px);
  grid-auto-rows: auto;
  margin: 1rem;
}

.album-cards>* {
  height: 340px;
  height: 320px;
}

.album-card.card {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: start;
  width: 200px;
  cursor: pointer;
  color: whitesmoke;
  background: #303030;
  cursor: pointer;
  border-radius: 4px;
  padding: .5rem;
  box-shadow: 0px 5px 15px 5px rgba(0, 0, 0, .25);
}

.secondary-text {
  font-weight: 100;
}

